--- a/src/app/modules/projects/components/project/project.component.html
+++ b/src/app/modules/projects/components/project/project.component.html
@@ -49,7 +49,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1">Start Date</span>
             </div>
-            <input id="weekEnd" type="text" placeholder="Datepicker" class="form-control" bsDatepicker
+            <input id="startDate" type="text" placeholder="Datepicker" class="form-control" bsDatepicker
                 [daysDisabled]="[]" [outsideClick]="true"
                 [bsConfig]="{selectWeek: true, dateInputFormat: 'YYYY-MM-DD' }"
                 (bsValueChange)="onStartDateChange($event)" value="{{ project.startDate | date:'yyyy-MM-dd' }}"
@@ -66,7 +66,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1">End Date</span>
             </div>
-            <input id="weekEnd" type="text" placeholder="Datepicker" class="form-control" bsDatepicker
+            <input id="endDate" type="text" placeholder="Datepicker" class="form-control" bsDatepicker
                 [daysDisabled]="[]" [outsideClick]="true"
                 [bsConfig]="{selectWeek: true, dateInputFormat: 'YYYY-MM-DD' }"
                 (bsValueChange)="onEndDateChange($event)" value="{{ project.endDate | date:'yyyy-MM-dd' }}"
