fix weekending to be "weekEndingIn"

--- a/src/app/modules/timesheets/pages/timesheet-approver-view-list/timesheet-approver-view-list.component.html
+++ b/src/app/modules/timesheets/pages/timesheet-approver-view-list/timesheet-approver-view-list.component.html
@@ -29,7 +29,7 @@
                             style="width: 100%;" (input)="dt.filter($event.target.value, col.field, 'contains')">
                         <input *ngSwitchCase="'versionNumber'" pInputText type="text" class="ui-column-filter"
                             style="width: 100%;" (input)="dt.filter($event.target.value, col.field, 'contains')">
-                        <input *ngSwitchCase="'weekEnding'" pInputText type="text" class="ui-column-filter"
+                        <input *ngSwitchCase="' weekEndingIn'" pInputText type="text" class="ui-column-filter"
                             style="width: 100%;" (input)="dt.filter($event.target.value, col.field, 'contains')">
                         <input *ngSwitchCase="'status'" pInputText type="text" class="ui-column-filter"
                             style="width: 100%;" (input)="dt.filter($event.target.value, col.field, 'contains')">
