--- a/src/app/core/layout/nav/nav.component.html
+++ b/src/app/core/layout/nav/nav.component.html
@@ -1,12 +1,14 @@
-<ul class="list-group list-group-flush">
-    <li class="list-group-item"><a routerLink="/content/employees">Employees</a></li>
-    <li class="list-group-item"><a routerLink="/content/timesheets">Timesheets</a></li>
-    <li class="list-group-item"><a routerLink="/content/timesheets/approver/view/list">Pending Timsheets</a></li>
-    <li class="list-group-item"><a routerLink="/content/reports">Reports</a></li>
-    <li class="list-group-item"><a routerLink="/content/wp">Work Packages</a></li>
-    <li class="list-group-item">Porta ac consectetur ac</li>
-    <li class="list-group-item">Vestibulum at eros</li>
-    <li class="list-group-item"><a routerLink="/content/projects">Projects</a></li>
+<ul class="list-group list-group-flush ">
+    <li class="list-group-item bg-navList"> MAIN MENU</li>
+    <li class="list-group-item bg-navList"><a routerLink="/content/employees">Employees</a></li>
+    <li class="list-group-item bg-navList"><a routerLink="/content/timesheets">Timesheets</a></li>
+    <li class="list-group-item bg-navList"><a routerLink="/content/timesheets/approver/view/list">Pending Timsheets</a>
+    </li>
+    <li class="list-group-item bg-navList"><a routerLink="/content/reports">Reports</a></li>
+    <li class="list-group-item bg-navList"><a routerLink="/content/wp">Work Packages</a></li>
+    <li class="list-group-item bg-navList">Porta ac consectetur ac</li>
+    <li class="list-group-item bg-navList">Vestibulum at eros</li>
+    <li class="list-group-item bg-navList"><a routerLink="/content/projects">Projects</a></li>
 
 
 </ul>
