--- a/src/app/core/layout/content-layout/content-layout.component.html
+++ b/src/app/core/layout/content-layout/content-layout.component.html
@@ -1,7 +1,7 @@
 <app-toolbar></app-toolbar>
 
 <mat-sidenav-container class="example-container">
-    <mat-sidenav #sidenav mode="side" [(opened)]="opened">
+    <mat-sidenav #sidenav mode="side" [(opened)]="opened" class="bg-navList">
         <app-nav></app-nav>
     </mat-sidenav>
 
