--- a/src/app/modules/wp/pages/wp-edit/wp-edit.component.html
+++ b/src/app/modules/wp/pages/wp-edit/wp-edit.component.html
@@ -1,1 +1,22 @@
-<p>wp-edit works!</p>
+<div class="card mx-1">
+    <div class="card-body">
+        <!-- Title -->
+        <h3 class="display-4">Update Work Package</h3>
+        <!-- alert -->
+        <shared-alertPromp [alerts]="alerts"></shared-alertPromp>
+
+
+        <app-wp [wp]="wp" [mode]="mode" [validWpCode]="validWpCode"
+        (changeWpCode)="validateWpCode()" [alerts]="alerts"></app-wp>
+
+        <!-- Action section-->
+        <div class="dropdown-divider my-3"></div>
+        <div class="d-flex flex-row-reverse">
+            <button type="button" class="btn btn-primary  m-1 px-3" (click)="onUpdate()">Update</button>
+            <button type="button" class="btn btn-primary m-1 px-2" (click)="onCancel($event)">Cancel</button>
+        </div>
+        <div class="dropdown-divider my-3"></div>
+    </div>
+
+
+</div>
