--- a/src/app/modules/wp/pages/wp-view/wp-view.component.html
+++ b/src/app/modules/wp/pages/wp-view/wp-view.component.html
@@ -1,1 +1,11 @@
-<p>wp-view works!</p>
+<div class="card mx-1">
+    <div class="card-body">
+        <!-- Title -->
+        <h3 class="display-4">Work Package</h3>
+        <!-- alert -->
+        <shared-alertPromp [alerts]="alerts"></shared-alertPromp>
+
+
+        <app-wp [wp]="wp" [mode]="mode" [validWpCode]="validWpCode" (changeWpCode)="validateWpCode()" [alerts]="alerts"></app-wp>
+
+</div>
