--- a/src/app/modules/wp/pages/wp-list/wp-list.component.html
+++ b/src/app/modules/wp/pages/wp-list/wp-list.component.html
@@ -23,11 +23,11 @@
                 </tr>
                 <tr>
                     <th *ngFor="let col of columns" [ngSwitch]="col.field">
-                        <input *ngSwitchCase="'projectId'" pInputText type="text"
+                        <input *ngSwitchCase="'projectCode'" pInputText type="text"
                             (input)="dt.filter($event.target.value, col.field, 'contains')">
                         <input *ngSwitchCase="'projectName'" pInputText type="text"
                             (input)="dt.filter($event.target.value, col.field, 'contains')">
-                        <input *ngSwitchCase="'wpId'" pInputText type="text"
+                        <input *ngSwitchCase="'wpCode'" pInputText type="text"
                             (input)="dt.filter($event.target.value, col.field, 'contains')">
                         <input *ngSwitchCase="'wpTitle'" pInputText type="text"
                             (input)="dt.filter($event.target.value, col.field, 'contains')">
@@ -41,12 +41,12 @@
             <ng-template pTemplate="body" let-rowData let-columns="columns">
                 <tr [pSelectableRow]="rowData">
                     <td *ngFor="let col of columns">
-                        <span *ngIf="col.field !=='activation' && col.field !=='button'">{{rowData[col.field]}}</span>
+                        <span *ngIf="col.field !=='status' && col.field !=='button'">{{rowData[col.field]}}</span>
                         <div *ngIf="col.field ==='button'">
                             <button type="button" class="btn btn-link btn-sm"
-                                [routerLink]="['view', rowData.wpId]">View</button>
+                                [routerLink]="['view', rowData.wpCode]">View</button>
                             <button type="button" class="btn btn-link btn-sm"
-                                [routerLink]="['edit', rowData.wpId]">Edit</button>
+                                [routerLink]="['edit', rowData.wpCode]">Edit</button>
                         </div>
                     </td>
                 </tr>
